fixing mobile background image for about slide 1 to increase performance on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -630,6 +630,10 @@ html{
 }
 
 @media (max-width: 768px) {
+    .about-container{
+        background: none;
+        background-color: #031013;
+    }
     .slide-banner{
         background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(img/about-slide-banner-bg-mobile.jpg);
         background-position: center;
@@ -673,6 +677,11 @@ html{
 @media (max-width: 768px) {
     .aboutslide1{
         height: max-content;
+        background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(img/about-slide1-bg-mobile.jpg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
     }
 }
 
